ft: test coverage and minor fixes
